--- a/hackaton/index.html
+++ b/hackaton/index.html
@@ -41,6 +41,15 @@
                 <li><strong>Fortalecimento de relações:</strong> Ajudar a ter conversas mais abertas e construtivas sobre dinheiro, fortalecendo as relações familiares e sociais</li>
             </ul>
         </div>
+        <div>
+            <h3>Como ter uma mentalidade financeira saudável?</h3>
+            <p>Mentalidade financeira significa desenvolver, da melhor forma possível, maneiras de diversificar as fontes de renda, aptidão para negociar dívidas, inteligência para pesquisa, planejamento e desenvolvimento para investir o seu dinheiro da melhor forma.</p> <br>
+            <p>Se conseguimos analisar, pensar e decidir sem agir de maneira impulsiva quando a questão é o dinheiro, então temos uma mentalidade financeira que foi desenvolvida de forma correta. No entanto a mentalidade financeira só existirá por meio da mentalidade de crescimento.</p> <br>
+            <p>De acordo com uma psicólogia da Universidade da Pensilvânia, a mentalidade de crescimento é a crença de que as pessoas são orientadas para crescer, adaptando-se com mais facilidade e aprendendo com a experiência e o esforço. A mentalidade de crescimento é mais eficiente na conquista de metas e no desenvolvimento de novas habilidades que nos possibilita mudar de forma positiva.</p> <br>
+            <p>Para desenvolver uma mentalidade financeira de forma saudável, há alguns passos que devemos seguir. O primeiro é examinar a sua situação financeira em pormenor: quanto você ganha, quanto gasta, o que é importante, o que é supérfluo, e quais são as suas dívidas.</p> <br>
+            <p>Em seguida, modifique suas crenças e pare de achar que o seu caso não tem solução e que não há nada que você possa fazer. Mude de atitude. Identifique os seus problemas, descubra novas fontes de renda, corte o supérfluo, aprenda a negociar suas dívidas, planeje com cuidado as suas compras</p> <br>
+            <p>Por fim, estude finanças. Quanto mais souber, mais você será capaz de desenvolver hábitos saudáveis, manterá sua mente tranquila, terá lucros e verá que, finalmente, sua mentalidade financeira está madura e pronta para ser bem sucedida.</p>
+        </div>
     </main>
 </body>
 </html>
